--- a/MOD3/Artifact02/styles.css
+++ b/MOD3/Artifact02/styles.css
@@ -45,7 +45,7 @@ body {
 
 .white {
     border: 1px solid black;
-    width: 90px;
+    width: 8%;
     height: 90px;
     background-color: white;
     float: left;
@@ -53,7 +53,7 @@ body {
 
 .black {
     border: 1px solid black;
-    width: 90px;
+    width: 8%;
     height: 90px;
     background-color: #787878;
     float: left;
@@ -69,5 +69,4 @@ body {
     background-color: lightgreen;
     z-index: 0;
 }
-
 
