--- a/MOD4/Module-Assignment/style.css
+++ b/MOD4/Module-Assignment/style.css
@@ -23,7 +23,7 @@ h1 {
     font-weight: normal;
     font-style: normal;
     font-size: 200%;
-    color: rgb(230, 137, 121);
+    color: tomato;
 
     background-color: black;
     width: 150px;
