--- a/Midterm/styles.css
+++ b/Midterm/styles.css
@@ -49,7 +49,7 @@ li {
 li, h2 {
     font-family: 'GlacialIndifferenceRegular';
     font-weight: normal;
-    font-size: normal;
+    font-style: normal;
 }
 
 #artifacts {
