--- a/Final/styles.css
+++ b/Final/styles.css
@@ -184,9 +184,13 @@ p {
 
 #video {
     padding: 40px;
-    width: 560px; /* you have to have a size or this method doesn't work */
-    height: 315px; /* think about making these max-width instead - might give you some more responsiveness */
+    width: 560px; 
+    height: 315px; 
     margin: auto;
+}
+
+iframe {
+    border: 0px;
 }
 
 .catalog {
