--- a/Final/styles.css
+++ b/Final/styles.css
@@ -203,7 +203,7 @@ iframe {
     display: block;
     color: white;
 }
-
+/* Resizing Images in Creative Page */
 #piece01 {
     height: 30%;
     width: 30%;
